# ppf.webref

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: CONTRIBUTING.md  DevNotes.md  README.md  README_pypi.md
docs/dev/: DEVDOCS.md
src/ppf/webref/: __init__.py  cli.py  model.py  secrets.py
src/ppf/webref/static/: script.js
src/ppf/webref/templates/: index.php  login.php
tests/: conftest.py  test_config.py  test_security.py  test_services.py
