[metadata]
name = ppf.webref
description = Flask app providing a web-interface to a JabRef database
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.webref/tree/master
project_urls =
    Bug Reports = https://github.com/adrianschlatter/ppf.webref/issues
    Source = https://github.com/adrianschlatter/ppf.webref
author = Adrian Schlatter

license = MIT
license_files = LICENSE

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = jabref, references, web, server, app

[options]
package_dir = 
    = src
packages = find_namespace:
python_requires = >=3.5, <4
install_requires =
    flask
    flask-sqlalchemy
    flask_talisman
    flask_login
    flask_wtf
    flask_bcrypt
    pymysql
    ppf.jabref
    plumbum
    importlib_metadata;python_version<'3.8'

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using:
# pip install -e .[dev,test]
test =
    check-manifest
    setuptools>=40.5.0
    flake8
    pytest
    coverage
dev =
    build
    tox
    twine

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

[coverage:run]
command_line = -m pytest
branch = True

[coverage:report]
include = src/*
omit =
    tests/*
    setup.py
exclude_also:
    if not test:
